# vidito

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Vidito  main.c
